tdf#167664 slow loading CSV with tokens ending in newline

takes the load time from several minutes to several seconds

Change-Id: Ie5bed51e4fd9ba45a94f446b2c3e02cd7661fbcc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188286
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins